@@ -534,3 +534,5 @@
   the ircd (#0002120) reported by SineSwiper.
 - Made it so +f notices are sent to %#chan, not @%#chan (#0002248) reported by aquanight.
 - Hopefully fixed the last of the alloca warnings (#0002202) reported by Stoebi.
+- Fixed a problem with set::htm::incoming-rate being interpreted incorrectly (#0002266)
+  reported by tabrisnet.
